# TraceElephant

./: .gitignore  README.md
code/agent_system/Captain-Agent/: .env  .gitignore  OAI_CONFIG_LIST_sample  README.md  batch_run_assistantbench.sh  batch_run_gaia.sh  pyproject.toml  requirements.txt
code/agent_system/Captain-Agent/autobuild_bench/: README.md  requirement.txt
code/agent_system/Captain-Agent/autobuild_bench/scenarios/: agent_library copy.json  agent_library.json  agent_library_2.json  agent_stats.py  collect_agents.py  cost_analysis.py  run_da_co.sh  run_math_qdd.sh  run_sci.sh
code/agent_system/Captain-Agent/autobuild_bench/scenarios/DA/DA-bench/: README.md
code/agent_system/Captain-Agent/autobuild_bench/scenarios/DA/DA-bench/Scripts/: custom_tabulate.py  init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/DA/DA-bench/Templates/AutoBuild/: scenario.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/DA/DA-bench/Templates/MetaAgent/: format.txt  scenario.py  scenario_init.sh
code/agent_system/Captain-Agent/autobuild_bench/scenarios/ML/ML_bench/Scripts/: init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/NLP/NLPBench/Scripts/: custom_tabulate.py  init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/Tabular_Data/TabMWP/Scripts/: init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/math/MATH/Scripts/: init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/programming/HumanEval/Scripts/: init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/retrieval/GAIA/: README.md
code/agent_system/Captain-Agent/autobuild_bench/scenarios/retrieval/GAIA/Scripts/: init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/sci/Chemistry/: README.md
code/agent_system/Captain-Agent/autobuild_bench/scenarios/sci/Chemistry/Scripts/: custom_tabulate.py  init_tasks.py
code/agent_system/Captain-Agent/autobuild_bench/scenarios/sci/Physics/: README.md
code/agent_system/Captain-Agent/autobuild_bench/scenarios/sci/Physics/Scripts/: custom_tabulate.py  init_tasks.py
code/agent_system/Captain-Agent/autogen/: browser_utils.py  code_utils.py  meta_scaffold_utils.py  meta_scaffolding_utils.py  tool_utils.py
code/agent_system/Captain-Agent/autogen/agentchat/: conversable_agent.py  groupchat.py
code/agent_system/Captain-Agent/autogen/agentchat/contrib/: agent_builder.py  meta_agent.py  meta_prompting_agent_autogen.py  meta_prompting_orig.py  meta_user_proxy_agent.py  tool_agent.py  tool_retriever.py  web_surfer.py
code/agent_system/Captain-Agent/autogen/agentchat/contrib/capabilities/: video_qa.py  video_transcription.py
code/agent_system/Captain-Agent/autogen/coding/: func_with_reqs.py  local_commandline_code_executor.py  utils.py
code/agent_system/Captain-Agent/autogen/io/: console.py  websockets.py
code/agent_system/Captain-Agent/autogen/logger/: sqlite_logger.py
code/agent_system/Captain-Agent/autogen/oai/: client.py  completion.py
code/agent_system/Captain-Agent/dataset/: DATASET.md
code/agent_system/Captain-Agent/docs/: captain_agent_paper.md
code/agent_system/Captain-Agent/samples/tools/autogenbench/autogenbench/: run_cmd.py
code/agent_system/Captain-Agent/scripts/: run_assistantbench.py  run_gaia.py
code/agent_system/Captain-Agent/tools/: requirements.txt  tool_description.tsv
code/agent_system/Captain-Agent/tools/data_analysis/: calculate_correlation.py  calculate_skewness_and_kurtosis.py  detect_outlier_iqr.py  detect_outlier_zscore.py  explore_csv.py  shapiro_wilk_test.py
code/agent_system/Captain-Agent/tools/information_retrieval/: arxiv_download.py  arxiv_search.py  docx_to_md.py  extract_pdf_image.py  extract_pdf_text.py  get_wikipedia_text.py  get_youtube_caption.py  image_qa.py  optical_character_recognition.py  perform_web_search.py  pptx_to_md.py  scrape_wikipedia_tables.py  spreadsheet_to_md.py  transcribe_audio_file.py  youtube_download.py
code/agent_system/Captain-Agent/tools/math/: calculate_circle_area_from_diameter.py  calculate_day_of_the_week.py  calculate_fraction_sum.py  calculate_matrix_power.py  calculate_reflected_point.py  complex_numbers_product.py  compute_currency_conversion.py  count_distinct_permutations.py  evaluate_expression.py  find_continuity_point.py  fraction_to_mixed_numbers.py  modular_inverse_sum.py  simplify_mixed_numbers.py  sum_of_digit_factorials.py  sum_of_primes_below.py
(+98 files in other folders)
